@@ -214,6 +214,14 @@
                             <onclick condition="!String.IsEmpty(Skin.String(StartupPlaylist))">Skin.Reset(StartupPlaylist)</onclick>
                         </control>
 
+                        <control type="button" id="9274" description="Customise Shutdown Menu">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9101)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31027]</label>
+                            <onclick>RunScript(script.skinshortcuts,type=manage&amp;group=powermenu)</onclick>
+                        </control>
+
+
                         <!-- ========== -->
                         <!-- Background -->
                         <!-- ========== -->
@@ -566,13 +574,6 @@
                         <!-- Miscellaneous -->
                         <!-- ============= -->
 
-                        <control type="button" id="9274" description="Customise Shutdown Menu">
-                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
-                            <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31027]</label>
-                            <onclick>RunScript(script.skinshortcuts,type=manage&amp;group=powermenu)</onclick>
-                        </control>
-
                         <control type="radiobutton" id="9273" description="Kiosk Mode">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
                             <include>Defs_Settings_Button</include>
@@ -642,6 +643,13 @@
                             <include>Defs_Settings_Button</include>
                             <label>$LOCALIZE[31039]</label>
                             <onclick>ActivateWindow(1117)</onclick>
+                        </control>
+
+                        <control type="button" id="9389" description="Enable ratings">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31312]</label>
+                            <onclick>ActivateWindow(1118)</onclick>
                         </control>
 
                         <!-- ============ -->
