@@ -2,6 +2,7 @@
 Add support for AEL metadata
 Show seekjump position
 Hide content for plotoverlay
+Skin Settings > Miscellaneous > Enable / disable ratings
 
 [B]0.9.10[/B]
 Hopeful fix for widgets bug
